{
    "name": "PlayerActions",
    "maps": [
        {
            "name": "PlayerInputs",
            "id": "722350d0-3201-4657-adbe-10a4f2ad006a",
            "actions": [
                {
                    "name": "Throw",
                    "type": "Value",
                    "id": "3c0505e3-a22a-4463-a863-308793218af2",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "67d879ff-ca83-41e1-8210-c4c6a5bd5cda",
                    "path": "<Keyboard>/space",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Throw",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}