{
    "name": "Inputs",
    "maps": [
        {
            "name": "Movement",
            "id": "5d2fb00e-f86b-42a0-8385-f50f1fe545ab",
            "actions": [
                {
                    "name": "Move",
                    "type": "Value",
                    "id": "f1818578-b92a-4d39-8a11-d57b6a812c66",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "Jump",
                    "type": "Button",
                    "id": "a8b23f71-0be4-4e01-b1fb-592aeb8e9416",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "2D Vector",
                    "id": "cddb56a6-a7d1-40cc-89fb-c35dbf655a4a",
                    "path": "2DVector(mode=1)",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "up",
                    "id": "9fab2030-5109-4731-ac3b-9b162d18ccbb",
                    "path": "<Keyboard>/w",
                    "interactions": "",
                    "processors": "",
                    "groups": "PlayerControl",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "down",
                    "id": "ac44e79b-f4da-42c1-a401-0d39e5c57154",
                    "path": "<Keyboard>/s",
                    "interactions": "",
                    "processors": "",
                    "groups": "PlayerControl",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "left",
                    "id": "060637a7-151a-4023-ade3-a6563af1fa37",
                    "path": "<Keyboard>/a",
                    "interactions": "",
                    "processors": "",
                    "groups": "PlayerControl",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "right",
                    "id": "f599142b-3d11-45cb-b30f-5120f3de8df8",
                    "path": "<Keyboard>/d",
                    "interactions": "",
                    "processors": "",
                    "groups": "PlayerControl",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "",
                    "id": "11e1f24c-507b-47c1-8cba-e10dfb305f60",
                    "path": "<Gamepad>/leftStick",
                    "interactions": "",
                    "processors": "",
                    "groups": "PlayerControl",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "148794c5-b1dc-4e24-8437-e468e7d9a333",
                    "path": "<Keyboard>/space",
                    "interactions": "",
                    "processors": "",
                    "groups": "PlayerControl",
                    "action": "Jump",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        },
        {
            "name": "Hook",
            "id": "d2367e1f-8001-4611-9833-57c406ed3f57",
            "actions": [
                {
                    "name": "ActivateHook",
                    "type": "Button",
                    "id": "ea5dbb45-e9db-4ce7-83ac-b1465214c4ee",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "01c94056-1098-4055-9613-23357437cc95",
                    "path": "<Mouse>/leftButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "PlayerControl",
                    "action": "ActivateHook",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        },
        {
            "name": "Rotation",
            "id": "3a88767f-e464-4743-b0d7-8a74a1c0c726",
            "actions": [
                {
                    "name": "RotateWithGamepad",
                    "type": "Value",
                    "id": "404afba1-de59-439f-86b9-26362057fc76",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "RotateWithMouse",
                    "type": "Value",
                    "id": "26217ed5-fcca-499b-9bfc-5717d444a324",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "ActivateMouseRotation",
                    "type": "Button",
                    "id": "48349746-03b1-4b97-b609-8d1fb437e7be",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "2D Vector",
                    "id": "97a982f5-f274-46c9-81a4-eb84ded3d3d8",
                    "path": "2DVector",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "RotateWithGamepad",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "9be10a8c-a288-402d-92ff-c7f479b86af4",
                    "path": "<Gamepad>/rightStick",
                    "interactions": "",
                    "processors": "",
                    "groups": "PlayerControl",
                    "action": "RotateWithGamepad",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "c610ab0d-79c1-4d13-944f-a9e8031721e1",
                    "path": "<Mouse>/rightButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "PlayerControl",
                    "action": "ActivateMouseRotation",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "1ff70839-aa14-4a8e-8931-d4876b9bd7ae",
                    "path": "<Mouse>/position",
                    "interactions": "",
                    "processors": "",
                    "groups": "PlayerControl",
                    "action": "RotateWithMouse",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "2D Vector",
                    "id": "81becb35-6e32-49c3-9d2d-7c30ea59ac92",
                    "path": "2DVector",
                    "interactions": "",
                    "processors": "",
                    "groups": "PlayerControl",
                    "action": "RotateWithMouse",
                    "isComposite": true,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": [
        {
            "name": "PlayerControl",
            "bindingGroup": "PlayerControl",
            "devices": []
        }
    ]
}